initial java 21+ update